--- a/package.json
+++ b/package.json
@@ -43,7 +43,5 @@
     "ts-jest": "^29.4.0",
     "typescript": "^5.8.3"
   },
-  "dependencies": {
-    "number-precision": "^1.6.0"
-  }
+  "dependencies": {}
 }
