--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@yorkjs/hive",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "util function",
   "main": "dist/hive.js",
   "module": "dist/hive.esm.js",
@@ -43,5 +43,7 @@
     "ts-jest": "^29.4.0",
     "typescript": "^5.8.3"
   },
-  "dependencies": {}
+  "dependencies": {
+    "dayjs": "^1.11.13"
+  }
 }
